--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,16 +10,26 @@ android {
         applicationId "com.rockstreamer.rockstreamerpayment"
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    signingConfigs {
+        release {
+            storeFile file("/Users/android/Android Development/android play store key/rockpayment.jks")
+            storePassword "rockpayment"
+            keyAlias "rockpayment"
+            keyPassword "rockpayment"
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -46,4 +56,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.anjlab.android.iab.v3:library:2.0.3'
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
 }
+apply plugin: 'com.google.gms.google-services'
